--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -53,7 +53,7 @@
 <p>6 days ago ... The Edge Performance Team's primary focus is efficiently connecting customers 
 with our platform. As a member of this team, you'll sit at the forefront of the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1796013'>Job Application for Senior Site Reliability Engineer at Sony ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1796013'>Job Application for Senior Site Reliability Engineer at Sony ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Are you interested in operating a world-class, eCommerce and payments 
 software platform at the core of the PlayStation Network? Our platform consists of 
@@ -68,7 +68,7 @@ Engineer (m/w) in Berlin (published: 13.09.2018). Apply now or check the other?.
 <p><span class="badge badge-light">Mountain View</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://rockall-technologies.workable.com/j/4F92E26A5E?viewed=true'>Graduate Site Reliability Engineer (SRE) - Apply online - Rockall - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rockall-technologies.workable.com/j/4F92E26A5E?viewed=true'>Graduate Site Reliability Engineer (SRE) - Apply online - Rockall - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Graduate Site Reliability Engineer (SRE) at Rockall.</p>
 <hr/>
@@ -81,7 +81,7 @@ Engineer (m/w) in Berlin (published: 13.09.2018). Apply now or check the other?.
 <p>3 days ago ... ... Expert with AWS services (certified SysOps Administrator or Solutions Architect 
 preferred); Experience with automating systems and infrastructure via Ansible,?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1623040?gh_src=40c9bcfa1'>Job Application for Site Reliability Engineer (Application Platform) at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1623040?gh_src=40c9bcfa1'>Job Application for Site Reliability Engineer (Application Platform) at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -153,7 +153,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fireflyon/8fee4307-7fb8-4dac-8bdd-4c6f07d5e1bb'>Firefly - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fireflyon/8fee4307-7fb8-4dac-8bdd-4c6f07d5e1bb'>Firefly - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -220,15 +220,15 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">Denver Denver Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/virtahealth/jobs/1776081'>Job Application for Senior Software Engineer, Site Reliability at Virta Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/virtahealth/jobs/1776081'>Job Application for Senior Software Engineer, Site Reliability at Virta Health</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rockall-technologies.workable.com/j/4F92E26A5E'>Rockall - Jobs: Graduate Site Reliability Engineer (SRE) - Apply online</a></h5> 
+<h5><a href='https://rockall-technologies.workable.com/j/4F92E26A5E'>Rockall - Jobs: Graduate Site Reliability Engineer (SRE) - Apply online</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999690014360-software-engineer-site-reliability-engineering-and-devops-team'>PayScale Software Engineer, Site Reliability Engineering and DevOps Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999690014360-software-engineer-site-reliability-engineering-and-devops-team'>PayScale Software Engineer, Site Reliability Engineering and DevOps Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -372,7 +372,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thousandeyes/jobs/1775064'>Job Application for Principal Site Reliability Engineer (SRE), Production Systems at ThousandEyes</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thousandeyes/jobs/1775064'>Job Application for Principal Site Reliability Engineer (SRE), Production Systems at ThousandEyes</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -388,7 +388,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999691802434-site-reliability-engineer'>SG Digital Site Reliability Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999691802434-site-reliability-engineer'>SG Digital Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -426,7 +426,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -442,7 +442,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4352562002'>Job Application for Senior Site Reliability Engineer at SoundHound Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4352562002'>Job Application for Senior Site Reliability Engineer at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
